--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Stats preview card component</title>
@@ -15,19 +15,38 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <main class="card">
+      <div class="card-image">
+        <picture>
+          <source media="(min-width: 48em)" srcset="./images/image-header-desktop.jpg">
+          <img src="./images/image-header-mobile.jpg" alt="">
+        </picture>
+      </div>
+      <div class="card-text">
+        <h1 class="main-heading">
+          Get <span class="accent">insights</span> that help your business grow.
+        </h1>
+       
+        <p class="main-paragraph">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.
+        </p>
+        <ul class="stat">
+          <li>10k+ <span class="stat-heading">companies</span></li>
+          <li>314 <span class="stat-heading">templates</span></li>
+          <li>12m+ <span class="stat-heading">queries</span></li>
+        </ul>
+      </div>
+    </main>  
+      
+    <footer>
+      <!--    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>.
+      </div>-->
+    </footer>
 
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
 </html>
